tests/machine/x/c/string_index.c
// Generated by Mochi experimental C compiler
#include <stdio.h>
#include <stdbool.h>
#include <stdlib.h>

int main() {
    int s = "mochi";
    printf("%d\n", s[1]);
    return 0;
}
